Fixed "Showcase-product-carousel" styling and spacing  Committer: Chester Guinto 	modified:   css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* General styling */
 body {
 	font-family: 'Source Sans Pro', sans-serif;
+	overflow-x: hidden;
 }
 
 .bold {
@@ -116,15 +117,16 @@ body {
 
 /* Showcase Product Carousel */
 #showcase-product-carousel {
+	display: flex;
 	padding-top: 70px;
-	width: 100%;
+	max-width: 100vw;
 }
 
 #showcase-product-carousel img {
 	height: 100vh;
-	max-width: 24%;
+	max-width: 23%;
 	object-fit: cover;
-	padding: 0px 50px 0px 50px;
+	padding: 0px 1% 0px 1%;
 }
 
 /* 2nd row */
